# sphinx-last-updated-by-git

./: .coveragerc  .gitignore  .gitmodules  LICENSE  MANIFEST.in  NEWS.rst  README.rst  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml  publish.yml  test.yml
src/: sphinx_last_updated_by_git.py
src/locale/de/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/es/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/fr/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/it/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/ja/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/ko/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/nl/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/pl/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/pt/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/ru/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/sv/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/tr/LC_MESSAGES/: sphinx_last_updated_by_git.mo  sphinx_last_updated_by_git.po
src/locale/zh_CN/LC_MESSAGES/: sphinx_last_updated_by_git.mo  (+1 more)
tests/: requirements.txt  test_example_repo.py  test_singlehtml.py  test_untracked.py  update_submodules.py
(+2 files in other folders)
